# cursor_kanban

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  package-lock.json  railway.toml  vercel.json
api/: index.py  requirements.txt
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  api.py  board_seed.py  db.py  main.py  openrouter.py  schemas.py  settings.py
backend/tests/: conftest.py  test_ai.py  test_app.py  test_openrouter.py
cursor_kanban/: CLAUDE.md  README.md
cursor_kanban/backend/app/: __init__.py  board_seed.py  schemas.py
cursor_kanban/backend/tests/: test_ai.py  test_app.py  test_openrouter.py
cursor_kanban/docs/: PLAN.md  TEST_ENGINEER.md  VACATION_PLAN.md  todos.md
cursor_kanban/frontend/: playwright.config.ts
cursor_kanban/frontend/src/components/: AppShell.tsx  ChatSidebar.test.tsx  DayPlanView.tsx  KanbanBoard.tsx  KanbanCard.tsx
cursor_kanban/frontend/tests/: mobile.spec.ts
cursor_kanban/scripts/: start-macos.sh  start-windows.ps1  stop-windows.ps1
docs/: DATABASE.md  PLAN.md  PRODUCT_ROADMAP.md  code_review.md  todos.md
frontend/: AGENTS.md  next.config.ts  package.json  playwright.config.ts
frontend/src/app/: globals.css
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  DayPlanView.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
frontend/src/lib/: kanban.test.ts  kanban.ts
frontend/src/test/: setup.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  stop-linux.sh
