[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
requires-python = ">=3.12"
dependencies = [
  "bcrypt>=4.0.0,<5.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "itsdangerous>=2.2.0,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false